// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); font-size: 16px; padding: 16px 16px 16px 16px;"
/>
`;

exports[`composition hook should return with Template props 1`] = `
Object {
  "colorMode": "default",
  "elementRef": [Function],
  "ref": [Function],
  "style": Array [
    Object {
      "fontSize": 200,
    },
    Object {},
  ],
}
`;

exports[`composition render props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); font-size: 16px; padding: 16px 16px 16px 16px;"
/>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); font-size: 16px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); color: rgb(238, 237, 253); font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); color: rgb(238, 237, 253); font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); font-size: 16px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235); font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Template.styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`theming Template.styles.base should render correctly 2`] = `
<div
  class="css-view-1dbjc4n"
  style="font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(239, 68, 68); font-size: 16px; padding: 16px 16px 16px 16px;"
/>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); font-size: 16px; padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(239, 68, 68); font-size: 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(22, 30, 46); font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;
